# netpix

./: .gitignore  Cargo.toml  LICENSE  Makefile  PERFORMANCE.md  README.md  rust-toolchain.toml  typos.toml  typos.yml
.github/: CODEOWNERS  labeler.yml
client/: Cargo.toml  Dioxus.toml  index.html  rust-toolchain.toml
client/src/: app.rs  app.rs.egui.bak  filter_system.rs  lib.rs  main.rs  streams.rs  utils.rs
client/src/app/: common.rs  components.rs  constants.rs  filters.rs  mpegts_info_table.rs  mpegts_packets_table.rs  mpegts_stream_plot.rs  mpegts_streams_table.rs  packets_table.rs  plots.rs  rtcp_packets_table.rs  rtp_packets_table.rs  rtp_streams_plot.rs  rtp_streams_table.rs  tab.rs  tables.rs  types.rs  utils.rs  websocket.rs
client/src/app.egui.bak/: common.rs  filter_utils.rs
client/src/app.egui.bak/common/: macros.rs
client/src/app.egui.bak/plots/: rtp_streams_plot.rs
client/src/app.egui.bak/tables/: mpegts_info_table.rs  packets_table.rs  rtcp_packets_table.rs
client/src/app.egui.bak/tables/mpegts_info_table/: constants.rs  descriptor.rs  filters.rs  table.rs  table_body.rs  types.rs
client/src/app.egui.bak/tables/mpegts_packets_table/: display.rs
client/src/app.egui.bak/tables/mpegts_streams_table/: display.rs  filters.rs  table.rs  types.rs
client/src/app.egui.bak/tables/packets_table/: types.rs
client/src/app.egui.bak/tables/rtcp_packets_table/: filters.rs  table.rs  types.rs
client/src/app.egui.bak/tables/rtp_packets_table/: filters.rs  types.rs
client/src/app.egui.bak/tables/rtp_streams_table/: types.rs
client/src/app/common/: filters.rs  macros.rs  plot.rs  table.rs  types.rs  utils.rs
client/src/app/components/: filter_input.rs
client/src/app/mpegts_info_table/: descriptor_ui.rs  filters.rs  pmt_table.rs  table.rs  table_body.rs  types.rs
client/src/app/mpegts_info_table/descriptor/: display.rs  ui.rs
client/src/app/mpegts_packets_table/: constants.rs  display.rs  filters.rs  table.rs  types.rs
client/src/app/mpegts_streams_table/: display.rs  filters.rs  table.rs  types.rs
client/src/app/packets_table/: filters.rs  table.rs
client/src/app/plots/: rtp_streams_plot.rs
client/src/app/rtp_packets_table/: filters.rs  table.rs  types.rs
client/src/app/rtp_streams_table/: filters.rs  table.rs  types.rs
client/src/app/tables/: ice_candidates_table.rs  mpegts_info_table.rs  mpegts_packets_table.rs  mpegts_streams_table.rs  packets_table.rs  rtcp_packets_table.rs  rtcp_streams_table.rs  rtp_packets_table.rs  rtp_streams_plot.rs  rtp_streams_table.rs  stun_packets_table.rs  turn_channel_table.rs
client/src/app/tables/filters/: mod.rs  mpegts_packets_filter.rs  mpegts_streams_filter.rs  packets_filter.rs  rtcp_packets_filter.rs  rtp_packets_filter.rs  rtp_streams_filter.rs  stun_packets_filter.rs
client/src/app/tables/ice_candidates_table/: table.rs  types.rs  visualization.rs
client/src/app/tables/mpegts_info_table/: table.rs  table_body.rs  types.rs
client/src/app/tables/mpegts_packets_table/: display.rs  filters.rs  table.rs  types.rs
client/src/app/tables/mpegts_streams_table/: filters.rs  table.rs  types.rs
client/src/app/tables/packets_table/: filters.rs  table.rs
client/src/app/tables/rtcp_packets_table/: filters.rs  table.rs  types.rs
client/src/app/tables/rtcp_streams_table/: filters.rs  table.rs  types.rs
client/src/app/tables/rtp_packets_table/: filters.rs  table.rs  types.rs
client/src/app/ui_components/: types.rs
client/src/filter_system/: comparison.rs  error.rs  lexer.rs  parser.rs  traits.rs  types.rs
client/src/streams/: mpeg_ts_streams.rs  mpegts_stream.rs  packets.rs  rtcp_stream.rs  rtpStream.rs  stream_statistics.rs
client/src/streams/mpegts_stream/: packet_info.rs  packet_processor.rs  substream.rs
common/: Cargo.toml
common/src/: descriptor.rs  lib.rs  mpegts.rs  packet.rs  pes.rs  psi.rs  rtcp.rs  rtp.rs  sdp.rs  stream_keys.rs  stun.rs  turn.rs  utils.rs
common/src/mpegts/: adaptation_field.rs  aggregator.rs  constants.rs  descriptors.rs  header.rs  packet_analyzer.rs  payload.rs  pes.rs  psi.rs  tests.rs
common/src/mpegts/descriptors/: audio_stream.rs  avc_video_descriptor.rs  ca_descriptor.rs  content_labelling.rs  copyright_descriptor.rs  data_stream_alignment_descriptor.rs  hierarchy.rs  ibp.rs  iso_639_language_descriptor.rs  macros.rs  maximum_bitrate_descriptor.rs  mpeg4_audio.rs  mpeg4_video.rs  multiplex_buffer_utilization_descriptor.rs  private_data_indicator.rs  private_data_indicator_descriptor.rs  registration_descriptor.rs  smoothing_buffer.rs  std_descriptor.rs  system_clock.rs  system_clock_descriptor.rs  tags.rs  target_background_grid.rs  target_background_grid_descriptor.rs  types.rs  video_stream.rs  video_stream_descriptor.rs  video_window.rs  video_window_descriptor.rs
common/src/mpegts/pes/: constants.rs  enums.rs  fragmentary_pes.rs  header.rs  optional_fields.rs  pes_buffer.rs  trick_mode_control.rs
common/src/mpegts/psi/: cat.rs  constants.rs  pat.rs  pmt.rs  psi_buffer.rs  tests.rs  tsdt.rs
common/src/pes/: pes.rs
common/src/psi/: cat.rs  pat.rs  pmt.rs  ps.rs  tsdt.rs
common/src/rtcp/: full_intra_request.rs  goodbye.rs  mod.rs  receiver_report.rs  reception_report.rs  sender_report.rs  slice_loss_indication.rs  source_description.rs  transport_feedback.rs
common/src/rtcp/extended_reports/: dlrr.rs  mod.rs  rrt.rs
common/src/rtcp/payload_feedbacks/: fir_entry.rs  full_intra_request.rs  mod.rs  picture_loss_indication.rs  receiver_estimated_maximum_bitrate.rs  sli_entry.rs  slice_loss_indication.rs
common/src/rtp/: payload_type.rs
common/src/stun/: class.rs  message_type.rs  method.rs  stun_attribute.rs
common/src/utils/: bits.rs  bytes.rs  crc.rs  pes_extension.rs  timestamp.rs  traits.rs
common/tests/: pcap_parse.rs
log_parser/: Cargo.toml  build.rs
log_parser/src/: bitstream.rs  lib.rs  parser.rs  types.rs
log_parser/src/proto/: rtc_event_log2.proto
log_parser/test_pb/: data_decoded.txt
macros/: Cargo.toml
macros/src/: lib.rs
(+67 files in other folders)
