[package]
name = "netpix"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Multicast streams analysis and visualization tool"
homepage = "https://github.com/xMOROx/netpix"
repository = "https://github.com/xMOROx/netpix"
readme = "README.md"
keywords = ["streaming", "RTP", "networking", "MPEG-TS"]
categories = ["development-tools", "multimedia", "visualization"]
include = ["/src/", "/dist/"]

[dependencies]
netpix_common = { path = "./common", version = "0.3.1" }
log = "0.4.22"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3"
pcap = { version = "2.2.0", features = ["capture-stream"] }
clap = { version = "4", features = ["derive"] }
rust-embed = "8.0.0"
mime_guess = "2.0.4"
ringbuf = "0.4.7"

[profile.release]
opt-level = 3

[lints.clippy]
result_unit_err = "allow"
new_without_default = "allow"
# not using workspaces, as the crates use different targets
