[package]
name = "netpix_client"
version = "0.4.1"
edition = "2021"

[dependencies]
netpix_common = { path = "../common", version = "0.4.0" }
egui = "0.30.0"
egui_extras = "0.30.0"
eframe = { version = "0.30.0", default-features = false, features = [
  "default_fonts",
  "glow",
] }
egui_plot = "0.30.0"
log = "0.4"
wasm-bindgen-futures = "0.4.45"

ewebsock = "0.2.0"
chrono = "0.4"
web-time = "1.0.0"
rustc-hash = "2.0.0"
web-sys = "0.3.74"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[lints.clippy]
result_unit_err = "allow"
new_without_default = "allow"
