[package]
name = "netpix_client"
version = "0.5.2"
edition = "2021"

[dependencies]
netpix_common = { path = "../common", version = "0.5.0" }
dioxus = { version = "0.6", features = ["web"] }
dioxus-web = "0.6"
log = "0.4"
wasm-bindgen-futures = "0.4.45"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
chrono = "0.4"
web-time = "1.0.0"
rustc-hash = "2.0.0"
web-sys = { version = "0.3", features = [
    "WebSocket", 
    "MessageEvent", 
    "CloseEvent", 
    "ErrorEvent", 
    "BinaryType",
    "Window",
    "Location",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[lints.clippy]
result_unit_err = "allow"
new_without_default = "allow"
