[package]
name = "netpix_common"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Crate with common utilities for netpix"
homepage = "https://github.com/xMOROx/netpix"
repository = "https://github.com/xMOROx/netpix"
readme = false

[dependencies]
serde = { version ="1.0", features = ["derive"]}
bincode = "1.3"
log = "0.4.20"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pcap = "1.0.0"
etherparse = "0.13.0"
rtp = "0.11.0"
rtcp = "0.11.0"
webrtc-sdp = "0.3"
webrtc-util = "0.9.0"
