[package]
name = "netpix_common"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Crate with common utilities for netpix"
homepage = "https://github.com/xMOROx/netpix"
repository = "https://github.com/xMOROx/netpix"
readme = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "=2.0.0-rc.3"
log = "0.4.20"
flate2 = "1.0.35"


[dev-dependencies]
pretty_assertions = "1.4.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pcap = "2.2.0"
rtp = "0.11.0"
rtcp = "0.11.0"
turn = "0.10.0"
webrtc-sdp = "0.3"
webrtc-util = "0.9.0"
pnet_packet = "0.35.0"


[profile.release]
opt-level = 3

[lints.clippy]
result_unit_err = "allow"
new_without_default = "allow"
